Current development version (branch v4-fixes)
=============================================

* Add file to recent menu when saving under a new name
* Avoid that autosave file is deleted if it was loaded and then the
  program was quit without modifying it


Version 4.3 (2 Nov 2012)
========================

* Setting the computer color for Red with the computer colors dialog did
  not work for game variant Trigon Three-Player
* Disable Undo menu item when it is not applicable
* Fixed an assertion at end of move generation in Trigon Three-Player if
  Pentobi was compiled in debug mode


Version 4.2 (7 Oct 2012)
========================

* Fixed crash when opening game info dialog in game variants Classic
  Two-Player or Trigon Two-Player


Version 4.1 (5 Oct 2012)
========================

* Result of rated game was counted wrongly in four-color/two-player game
  variants if the first player had a higher score than the second player
  but the first color a lower score than the second color.
* Fixed potential crash if Undo, Truncate or Truncate Children is selected
  while the computer is thinking.
* Automatic continuing of computer play did not work in some cases if the
  computer was thinking while the Computer Color dialog was used.


Version 4.0 (4 Oct 2012)
========================

* New menu item "Beginning of Branch"
* The rating dialog now also shows the best previous rating and has
  a button to reset the rating
* A thumbnail plugin for KDE can be built by using the CMake option
  -DPENTOBI_BUILD_KDE_THUMBNAILER=ON
* Replaced the icons with less colorful ones. All icons are now licensed
  under the GPLv3+ and include SVG sources. No icons from the Tango icon
  set are used anymore.


Version 3.0 (1 Aug 2012)
========================

* New functionality to compute a player rating for the user by playing
  rated games against the computer
* Different options for speed of game analysis
* New menu item "Play Single Move" to make the computer play a move